Refactored InfoTeacher as a wrapper of Teacher.